<resources>
    <string name="app_name">App Common</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_username">Username</string>
    <string name="text_title_welcome">Welcome</string>
    <string name="text_input_filter">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm123456789_-</string>
    <string name="text_error_username_invalid">Username is invalid</string>
    <string name="text_error_password_invalid">Password is invalid</string>
    <string name="text_button_logout">Logout</string>
    <string name="text_button_register">Register</string>
    <string name="text_label_new_user">New User</string>
    <string name="text_button_login">Login</string>
    <string name="text_error_re_password_not_match">Password and Re-password must be match</string>
    <string name="text_error_re_password_invalid">Re-password is invalid</string>
    <string name="text_hint_re_password">Re-password</string>
    <string name="text_hint_email">Email</string>
    <string name="text_error_email_invalid">Email is invalid</string>
</resources>